Now supporting ssl connections from postgres

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,4 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DBNAME=nuklai_feed_db
+POSTGRES_ENABLESSL=false  # or true to enable SSL
